# pocket_musec

./: .env.example  .gitignore  2_2_cn_1.md  ADVANCED_IMAGE_PROCESSING_COMPLETE.md  ADVANCED_IMAGE_PROCESSING_REVIEW.md  ASYNC_CODE_REVIEW.md  ASYNC_IMPROVEMENTS_COMPLETE.md  ASYNC_REVIEW_SUMMARY.md  COMMIT_SUMMARY.md  COMPLETE_RAG_IMPLEMENTATION_SUMMARY.md  DATABASE_BACKUP_SUMMARY.md  DOCUMENT_CLASSIFICATION_GUIDE.md  DOCUMENT_PROCESSING_DEBUG_REPORT.md  E2E_TEST_COMPLETE_REPORT.md  E2E_WORKFLOW_TEST_RESULTS.md  EMBEDDINGS_FIXES_SUMMARY.md  EMBEDDINGS_SOURCE_DATA_LOCATION.md  FINAL_SUMMARY.md  FRONTEND_BACKEND_INTEGRATION_COMPLETE.md  FULL_DOCUMENT_TEST_RESULTS.md  INTEGRATION_STATUS.md  KIMI_K2_DEPLOYMENT_COMPLETE.md  KIMI_K2_TEST_SUMMARY.md  LESSON_GENERATION_QUALITY_ANALYSIS_COMPLETE.md  LESSON_REFINEMENT_FIX_COMPLETE.md  MISSING_STANDARDS_INVESTIGATION.md  MODEL_SELECTOR_DOCUMENTATION.md  MULTI_GRADE_TEST_RESULTS.md  Makefile  NAMING_CONVENTIONS_ANALYSIS.md  OBJECTIVE_FORMATTING_FIX_COMPLETE.md  OPENSPEC_CHANGE_CREATED.md  OPTIONAL_ENHANCEMENTS_COMPLETE.md  PARSER_VALIDATION_REPORT.md  PHASE10_11_COMPLETION_REPORT.md  PHASE13_COMPLETION_REPORT.md  PHASE8_COMPLETION.md  PRESENTATION_FEATURE_STATUS.md  PRESENTATION_UI_DOCUMENTATION.md  PROGRESS_SYSTEM_DOCUMENTATION.md  (+102 more)
.playwright-mcp/: new_conversation_fix_complete.md  new_conversation_issue_report.md
archive/: README.md
backend/: PRESENTATION_JOBS_MIGRATION.md  __init__.py  config.py  migrate_presentation_jobs.py  test_file_linking.py  test_presentations_import.py
cli/: __init__.py  main.py
docs/: API.md  (+33 more)
(+3935 files in other folders)
